--- a/_data/data.yml
+++ b/_data/data.yml
@@ -39,8 +39,8 @@ skills:
 
 # Profile
 profile: |
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
-  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
+  Highly motivated and detail-oriented IT professional with a passion for technology and a strong foundation in both technical and soft skills.
+  I possess a solid understanding of Devops principles, methodologies, and tools such as Git Jenkins, Docker, Kubernetes and AWS. 
   quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
   Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu 
   fugiat nulla pariatur.
