--- a/_data/data.yml
+++ b/_data/data.yml
@@ -40,10 +40,9 @@ skills:
 # Profile
 profile: |
   Highly motivated and detail-oriented IT professional with a passion for technology and a strong foundation in both technical and soft skills.
-  I possess a solid understanding of Devops principles, methodologies, and tools such as Git Jenkins, Docker, Kubernetes and AWS. 
-  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu 
-  fugiat nulla pariatur.
+  I possess a solid understanding of Devops principles, methodologies, and tools such as Git, Jenkins, Docker, Kubernetes and AWS. 
+  I have excellent problem-solving skills, attention to detail, and a strong desire to learn and collaborate with cross-functional teams to achieve business goals. 
+  With my passion for automation and DevOps culture, I am excited to join a team that values innovation, agility, and continuous learning.
 
 # Experience
 experience:
