--- a/_data/data.yml
+++ b/_data/data.yml
@@ -57,7 +57,19 @@ experience:
       fugiat nulla pariatur.
     technologies_used: | 
       Go, Angular, Typescript, C++
-  
+      
+  - role: Researcher
+    time: 2016-2020
+    company: Microsoft
+    details: |
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
+      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
+      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+      Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu 
+      fugiat nulla pariatur.
+    technologies_used: | 
+      Python, Tensorflow, Keras, Matlab
+
   - role: Researcher
     time: 2016-2020
     company: Microsoft
