--- a/_data/data.yml
+++ b/_data/data.yml
@@ -56,16 +56,14 @@ experience:
       quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
       Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu 
       fugiat nulla pariatur.
-    technologies_used: | 
-      Go, Angular, Typescript, C++
 
   - role: IT Support Technician
     time: 2018-2021
     company: Revenue Service Ltd
     details: |
-      Ensuring that organization technology infrastructure is running smoothly and effectively. <p>
-      Installing, configuring and maintaining software and hardware components of computer and network systems. <p> 
-      Diagnosing and troubleshooting software and hardware issues. 
+      Ensuring that organization technology infrastructure is running smoothly and effectively. <br>
+      Installing, configuring and maintaining software and hardware components of computer and network systems. <br>
+      Diagnosing and troubleshooting software and hardware issues. <br>
       Maintaining and updating technical documentation regularly.
 
   - role: Researcher
@@ -77,8 +75,6 @@ experience:
       quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
       Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu 
       fugiat nulla pariatur.
-    technologies_used: | 
-      Python, Tensorflow, Keras, Matlab
 
 projects:
   - title: Kubernetes Based Voting Application 
