--- a/_data/data.yml
+++ b/_data/data.yml
@@ -45,15 +45,14 @@ profile: |
 
 # Experience
 experience:
-  - role: Software Engineer
-    time: 2020-Present
-    company: Google
-    details: |
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
-      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
-      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-      Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu 
-      fugiat nulla pariatur.
+  - role: Customer Support
+    time: 2021-Present
+    company: Mand Tyres
+    details: |  
+      Provide basic end-user troubleshooting and desktop support. 
+      Delivered exceptional customer service to every customer by leveraging extensive knowledge of products and services and creating welcoming positive experiences. 
+      Used ticketing systems to manage and process support actions and requests.
+      Patch software and installed new versions to eliminate security problems and protect data.
     Technology Used: 
 
   - role: IT Support Technician
@@ -64,6 +63,8 @@ experience:
       Installing, configuring and maintaining software and hardware components of computer and network systems. <br>
       Diagnosing and troubleshooting software and hardware issues. <br>
       Maintaining and updating technical documentation regularly.
+    Technology Used:  
+
 projects:
   - title: Kubernetes Based Voting Application 
     link: #
