Adding second project

--- a/_data/data.yml
+++ b/_data/data.yml
@@ -77,6 +77,6 @@ projects:
   - title: Cool Project 
     link: #
     details: |
-      Lorem ipsum dolor sit amet, Starting up a new kubernetes cluster, sed do eiusmod 
+      Lorem ipsum dolor sit amet, Starting up a new kubernetes, sed do eiusmod 
       tempor incididunt ut labore et dolore magna aliqua.
 
