--- a/_data/data.yml
+++ b/_data/data.yml
@@ -47,7 +47,7 @@ profile: |
 experience:
   - role: Customer Support
     time: 2021-Present
-    company: Mand Tyres
+    company: Budget Car Rental
     details: |  
       Provide basic end-user troubleshooting and desktop support.<br>
       Delivered exceptional customer service to every customer by leveraging extensive knowledge of products and services and creating welcoming positive experiences.<br>
