--- a/_data/data.yml
+++ b/_data/data.yml
@@ -49,10 +49,10 @@ experience:
     time: 2021-Present
     company: Budget Car Rental
     details: |  
-      Provide basic end-user troubleshooting and desktop support.<br>
-      Delivered exceptional customer service to every customer by leveraging extensive knowledge of products and services and creating welcoming positive experiences.<br>
-      Used ticketing systems to manage and process support actions and requests. <br>
-      Patch software and installed new versions to eliminate security problems and protect data.
+      Responded to customer inquiries regarding rental bookings,policies and procedures, providing accurate and timely information to ensure a positive customer experience.<br>
+      Managed rental reservations, including modifications, cancellations, and coordination of pickup and return logistics.<br>
+      Resolved customer complaints and disputes related to billing, vehicle damage claims, and rental agreement issues, using active listening and effective communication skills to ensure prompt and satisfactory solutions. <br>
+      Maintained detailed records and documentation of customer interactions, rental agreements, complaints, and billing records, ensuring compliance with company policies and procedures.
     Technology Used: 
 
   - role: IT Support Technician
