--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: CV | A jekyll template
+title: CV | Kehinde Akinsade CV
 description:  A beautiful template for your CV.
 url: https://jekyll-cv.stavrospanakakis.com
 baseurl: ''
