--- a/_data/data.yml
+++ b/_data/data.yml
@@ -66,7 +66,7 @@ experience:
     Technology Used: 
 
 projects:
-  - title: Kubernetes Based Voting Application. <B>
+  - title: Kubernetes Based Voting Application.
     link: #
     details: |
       Deployed a Kubernetes-based voting application, which allowed users to vote for their preferred option in a poll. <p> 
