--- a/_data/data.yml
+++ b/_data/data.yml
@@ -59,10 +59,10 @@ experience:
     time: 2018-2021
     company: Revenue Service Ltd, Lagos Nigeria
     details: |
-      Ensuring that organization technology infrastructure is running smoothly and effectively. <br>
-      Installing, configuring and maintaining software and hardware components of computer and network systems. <br>
-      Diagnosing and troubleshooting software and hardware issues. <br>
-      Maintaining and updating technical documentation regularly.
+      Installed, configured, and maintained computer hardware, peripherals, and software applications. <br>
+      Assisted in the administration and maintenance of cloud computing infrastructure, including provisioning and configuring virtual machines, storage resources, and network components. <br>
+      Conducted training sessions and created user-friendly documentation to empower employees with the knowledge and skills to utilize technology effectively. <br>
+      Provided basic end-user troubleshooting and desktop support.
     Technology Used: 
 
 projects:
